# vlife

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: avx512-test.yml
docs/: METRICS.md  OPTIMIZATION-EXPERIMENTS.md  PERFORMANCE-OPTIMIZATIONS.md  PROFILING.md  TILE-CELL-LIFECYCLE.md  vlife-technical-paper.md  vlife-technical-paper.tex
scripts/: run_benchmarks.sh
src/: GameOfLife.cpp  GameOfLife.h  GameOfLifeView.cpp  GameOfLifeView.h  SimpleGameOfLife.cpp  SimpleGameOfLife.h  main.cpp
src/vlife/: AppleSiliconCounters.cpp  AppleSiliconCounters.h  CpuFeatures.h  Tile.cpp  Tile.h  TilePool.cpp  TilePool.h  VLife.cpp  VLife.h  VLifeMetrics.cpp  VLifeMetrics.h
tests/benchmark/: BenchmarkPatterns.h  CpuCounterBenchmark.cpp  ExtendedBenchmark.cpp  ExtendedPatterns.h  MetricsBenchmark.cpp  README.md  VLifeBenchmark.cpp
tests/vlife/: TileEdgeTest.cpp  VLifeTest.cpp  VLifeTest_debug.cpp
